# curvature

./: .gitignore  CLAUDE.md  CMakeLists.txt  PROPOSAL.md  README.md  STATUS.md  requirements.txt
prototype/: audition_matrix.py  flow.py  hyperbolic.py  implausible.py  laplacian.py  manifold4d.py  meshes.py  oracles.py  oracles_cpp.py  palette.py  render.py  ricci.py
renders/checkpoint0/: MANIFEST.md  genus2_s0_flow.wav.asd  genus2_s0_flow_decorrelated.wav.asd  genus2_s0_static.wav.asd  genus2_s1_flow.wav.asd  genus2_s1_static.wav.asd  genus2_s2_flow.wav.asd  genus2_s2_static.wav.asd  icosphere3_s0_flow.wav.asd  icosphere3_s0_flow_decorrelated.wav.asd  icosphere3_s0_static.wav.asd  icosphere3_s1_flow.wav.asd  icosphere3_s1_static.wav.asd  icosphere3_s2_flow.wav.asd  icosphere3_s2_static.wav.asd  torus_1x1_s0_flow.wav.asd  torus_1x1_s0_flow_decorrelated.wav.asd  torus_1x1_s0_static.wav.asd  torus_1x1_s1_flow.wav.asd  torus_1x1_s1_static.wav.asd  torus_1x1_s2_flow.wav.asd  torus_1x1_s2_static.wav.asd  torus_1x1p618_s0_flow.wav.asd  torus_1x1p618_s0_flow_decorrelated.wav.asd  torus_1x1p618_s0_static.wav.asd  torus_1x1p618_s1_flow.wav.asd  torus_1x1p618_s1_static.wav.asd  torus_1x1p618_s2_flow.wav.asd  torus_1x1p618_s2_static.wav.asd
renders/checkpoint0_implausible/: MANIFEST.md
renders/checkpoint0_palette/: MANIFEST.md
renders/checkpoint2/: MANIFEST.md
renders/checkpoint4d/: MANIFEST.md
renders/hyperbolic/: MANIFEST.md
src/dsp/: ModalBank.h
src/engine/: GeometryService.cpp  GeometryService.h  SpectrumBus.h  SpectrumFrame.h  StrikeQueue.h  TripleBuffer.h  VizFrame.h  VoiceManager.h
src/geometry/: EigenSolver.cpp  EigenSolver.h  Laplacian.cpp  Laplacian.h  Mesh.cpp  Mesh.h  Presets.cpp  Presets.h  RicciFlow.cpp  RicciFlow.h  TetManifold.cpp  TetManifold.h  TetMesh.cpp  TetMesh.h
src/plugin/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
tests/: engine_test.cpp  flow_test.cpp  geometry_test.cpp  tet_test.cpp
tests/data/spectra/: genus2.txt  icosphere3.txt  mandelbulb.txt  torus3_aniso8.txt  torus3_chaotic8.txt  torus3_cube8.txt  torus_1x1.txt  torus_1x1p618.txt  torus_8x1.txt
tools/: flow_soak.cpp  render_offline.cpp  run_pluginval.sh
